--- a/pom.xml
+++ b/pom.xml
@@ -283,7 +283,28 @@
 		    <artifactId>jackson-annotations</artifactId>
 		    <version>2.9.10</version>
 		</dependency>
-
+		
+		<!-- SLF4J API -->
+		<dependency>
+		    <groupId>org.slf4j</groupId>
+		    <artifactId>slf4j-api</artifactId>
+		    <version>1.7.36</version>
+		</dependency>
+		
+		<!-- Logback (SLF4J 구현체, Spring Boot 기본) -->
+		<dependency>
+		    <groupId>ch.qos.logback</groupId>
+		    <artifactId>logback-classic</artifactId>
+    		<version>1.2.13</version>
+		</dependency>
+		
+		<!-- Lombok -->
+		<dependency>
+		    <groupId>org.projectlombok</groupId>
+		    <artifactId>lombok</artifactId>
+		    <version>1.18.32</version>
+		    <scope>provided</scope>
+		</dependency>
 
         <!-- tiles -->
 		<!-- Tiles Core -->
