feat: 이메일 발송 설정 및 Redis 연동 공통 서비스 구현 - javax.mail:mail 의존성 추가 및 root-context.xml에 이메일 발송 관련 설정 - spring-data-redis, jedis 의존성 추가 및 root-context.xml에 Redis 연결 설정 - RedisService, RedisServiceImpl 생성 - 이메일 인증 등에서 공통적으로 활용할 수 있도록 구조 설계 - 민감 정보 보호를 위해 .gitignore에 root-context.xml 추가

--- a/pom.xml
+++ b/pom.xml
@@ -111,10 +111,10 @@
 		    <artifactId>egovframework.rte.ptl.mvc</artifactId>
 		    <version>${egovframework.rte.version}</version>
 		    <exclusions>
-		    	<exclusion>
-		    		<artifactId>commons-logging</artifactId>
-		    		<groupId>commons-logging</groupId>
-		    	</exclusion>
+				<exclusion>
+					<artifactId>commons-logging</artifactId>
+					<groupId>commons-logging</groupId>
+				</exclusion>
 		    </exclusions>
         </dependency>
         <dependency>
@@ -193,14 +193,17 @@
 		    <scope>test</scope>
 		</dependency>
 
-
-
-       	<!-- Ajax -->
-<!-- 		<dependency> -->
-<!-- 			<groupId>net.sourceforge.ajaxtags</groupId> -->
-<!-- 			<artifactId>ajaxtags</artifactId> -->
-<!-- 			<version>1.5-beta-0.2</version> -->
-<!-- 		</dependency> -->
+		<!-- Redis -->
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-redis</artifactId>
+			<version>1.8.18.RELEASE</version> <!-- Spring 4.x 호환 버전 -->
+		</dependency>
+		<dependency>
+			<groupId>redis.clients</groupId>
+			<artifactId>jedis</artifactId>
+			<version>2.9.3</version> <!-- Jedis 2.x 버전 -->
+		</dependency>
 
         <!-- JSON start -->
 		<dependency>
@@ -295,7 +298,7 @@
 		<dependency>
 		    <groupId>ch.qos.logback</groupId>
 		    <artifactId>logback-classic</artifactId>
-    		<version>1.2.13</version>
+			<version>1.2.13</version>
 		</dependency>
 		
 		<!-- Lombok -->
@@ -304,6 +307,13 @@
 		    <artifactId>lombok</artifactId>
 		    <version>1.18.32</version>
 		    <scope>provided</scope>
+		</dependency>
+
+		<!-- javax.mail -->
+		<dependency>
+			<groupId>javax.mail</groupId>
+			<artifactId>mail</artifactId>
+			<version>1.4.7</version>
 		</dependency>
 
         <!-- tiles -->
