feat: 이메일 인증 기능 및 Redis 기반 인증번호 검증 로직 구현 - 이메일 인증번호 발송 및 인증번호 검증 기능 추가 - 인증번호를 Redis에 저장하고 5분간 유효하도록 TTL 설정 - 인증번호 입력 시 Redis에서 값 조회 및 검증, 인증 성공 시 Redis에서 삭제 - 이메일 발송을 위한 JavaMailSender 설정 및 EmailService 구현 - 이메일 수신 및 인증번호 확인 OK

--- a/pom.xml
+++ b/pom.xml
@@ -316,6 +316,13 @@
 			<version>1.4.7</version>
 		</dependency>
 
+		<!-- Spring Mail 지원 -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context-support</artifactId>
+			<version>4.3.22.RELEASE</version> <!-- 프로젝트 Spring 버전과 일치 -->
+		</dependency>
+
         <!-- tiles -->
 		<!-- Tiles Core -->
 			<!-- http://mvnrepository.com/artifact/org.apache.tiles/tiles-core -->
