feat: 카카오 소셜 로그인 기능 구현 및 보안 설정 분리
[기능]
- 카카오 OAuth2 로그인 플로우 구현
  - 인가 코드 콜백 처리(/kakao)
  - AccessToken 발급 후 사용자 정보 요청
  - 로그인 성공 시 사용자 닉네임 세션 저장 및 리다이렉트
- KakaoResponseDto 생성: nickname 기반 로그인 사용자 정보 전달

[설정]
- kakao.client.id, secret, redirect_uri application-oauth.properties로 분리
- @Value 애노테이션 활용해 주입

[보안]
- root-context.xml에서 property-placeholder로 외부 프로퍼티 파일 로딩 처리
- 민감정보 포함된 root-context.xml, application-oauth.properties .gitignore 추가

[로그]
- 디버깅을 위한 상세 로그 추가

[TODO]
- Redis 또는 DB 세션 연동 고려
- 닉네임 외 정보 확장 필요시 DTO 구조 확장

--- a/.gitignore
+++ b/.gitignore
@@ -16,4 +16,5 @@
 .idea/
 
 # 설정 파일
-webapp/WEB-INF/spring/root-context.xml
+/src/main/webapp/WEB-INF/spring/root-context.xml
+/src/main/resources/application-oauth.properties
